Tweak to index page title

--- a/beno/templates/index.html
+++ b/beno/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base_generic.html" %}
 
+{% block title %}
+<title>Home</title>
+{% endblock %}
+
 {% block content %}
   <h1>Beno</h1>
   <p>Welcome to Beno!</p>
