--- a/beno/templates/base_generic.html
+++ b/beno/templates/base_generic.html
@@ -16,7 +16,7 @@
           <ul class="sidebar-nav">
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'tasks' %}">All open tasks</a></li>
-            <li><a href="">All tags</a></li>
+            <li><a href="{% url 'tags' %}">All tags</a></li>
           </ul>
         {% endblock %}
         </div>
