--- a/beno/templates/beno/task_detail.html
+++ b/beno/templates/beno/task_detail.html
@@ -1,5 +1,9 @@
 {% extends "base_generic.html" %}
 
+{% block title %}
+<title>View Task</title>
+{% endblock %}
+
 {% block content %}
   <h2>{{ task.description }}</h2>
 
