--- a/beno/templates/beno/tag_list.html
+++ b/beno/templates/beno/tag_list.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block title %}
-<title>All tags</title>
+<title>All Tags</title>
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
     <ul>
       {% for tag in tag_list %}
         <li>
-          <a href="">{{ tag.name }}</a>
+          <a href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
         </li>
       {% endfor %}
     </ul>
