--- a/beno/templates/beno/task_detail.html
+++ b/beno/templates/beno/task_detail.html
@@ -27,7 +27,7 @@
     <hr>
     <h5>Tags:</h5>
       {% for tag in task.tag.all %}
-        <a href="">{{ tag }}</a>{% if not forloop.last %},{% endif %}
+        <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}
       {% endfor %}
   <div>
 {% endblock %}
