--- a/beno/templates/base_generic.html
+++ b/beno/templates/base_generic.html
@@ -8,22 +8,32 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   </head>
+
   <body>
     <div class="container-fluid">
       <div class="row">
+
         <div class="col-sm-2">
         {% block sidebar %}
           <ul class="sidebar-nav">
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'tasks' %}">All open tasks</a></li>
             <li><a href="{% url 'tags' %}">All tags</a></li>
+          {% if user.is_authenticated %}
+            <li>Logged in as {{ user.get_username }}</li>
+            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+          {% else %}
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+          {% endif %}
           </ul>
         {% endblock %}
         </div>
+
         <div class="col-sm-10">
           {% block content %}
           {% endblock %}
         </div>
+
       </div>
     </div>
   </body>
