--- a/beno/templates/base_generic.html
+++ b/beno/templates/base_generic.html
@@ -17,8 +17,10 @@
         {% block sidebar %}
           <ul class="sidebar-nav">
             <li><a href="{% url 'index' %}">Home</a></li>
-            <li><a href="{% url 'tasks' %}">All open tasks</a></li>
+            <li><a href="{% url 'open-tasks' %}">Open tasks</a></li>
+            <li><a href="{% url 'all-tasks' %}">All tasks</a></li>
             <li><a href="{% url 'tags' %}">All tags</a></li>
+            <br>
           {% if user.is_authenticated %}
             <li>Logged in as {{ user.get_username }}</li>
             <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
