--- a/beno/templates/beno/open_tasks_list.html
+++ b/beno/templates/beno/open_tasks_list.html
@@ -6,9 +6,9 @@
 
 {% block content %}
   <h1>Open Tasks</h1>
-  {% if incomplete_task_list %}
+  {% if open_tasks_list %}
     <ul>
-      {% for task in incomplete_task_list %}
+      {% for task in open_tasks_list %}
         <li class="{% if task.priority == '3' %}text-success{% elif task.priority == '1' %}text-danger{% else %}text-warning{% endif %}" style="margin-top:20px">
           <strong>Priority level {{ task.priority }}: </strong><a href="{{ task.get_absolute_url }}">{{ task.description }}</a>
           <br>
