Adds create / update / delete tasks

--- a/beno/templates/base_generic.html
+++ b/beno/templates/base_generic.html
@@ -17,8 +17,12 @@
         {% block sidebar %}
           <ul class="sidebar-nav">
             <li><a href="{% url 'index' %}">Home</a></li>
+            <br>
+            <li><strong><a href="{% url 'task_create' %}">Add new task</a></strong></li>
+            <br>
             <li><a href="{% url 'open-tasks' %}">Open tasks</a></li>
             <li><a href="{% url 'all-tasks' %}">All tasks</a></li>
+            <br>
             <li><a href="{% url 'tags' %}">All tags</a></li>
             <br>
           {% if user.is_authenticated %}
