--- a/beno/templates/base_generic.html
+++ b/beno/templates/base_generic.html
@@ -27,9 +27,9 @@
             <br>
           {% if user.is_authenticated %}
             <li>Logged in as {{ user.get_username }}</li>
-            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+            <li><a href="{% url 'logout'%}">Logout</a></li>
           {% else %}
-            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+            <li><a href="{% url 'login'%}">Login</a></li>
           {% endif %}
           </ul>
         {% endblock %}
