--- a/beno/templates/beno/task_detail.html
+++ b/beno/templates/beno/task_detail.html
@@ -5,7 +5,9 @@
 {% endblock %}
 
 {% block content %}
-  <h2>{{ task.description }}</h2>
+  <h1>Task</h1>
+  <br>
+  <h3>{{ task.description }}</h3>
 
   <div style="margin-top:20px">
     <h5 class="{% if task.priority == '3' %}text-success{% elif task.priority == '1' %}text-danger{% else %}text-warning{% endif %}">
