--- a/beno/templates/beno/task_form.html
+++ b/beno/templates/beno/task_form.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row">
       <div class="col-6">
-        {{ form.tag|as_crispy_field }}
+        {{ form.category|as_crispy_field }}
       </div>
 
     <div class="col-6">
