--- a/beno/templates/index.html
+++ b/beno/templates/index.html
@@ -12,7 +12,7 @@
   <ul>
     <li><strong>All tasks:</strong> {{ num_tasks }} </li>
     <li><strong>Outstanding tasks:</strong> {{ num_incomplete_tasks }} </li>
-    <li><strong>Tags:</strong> {{ num_tags }} </li>
+    <li><strong>Categories:</strong> {{ num_categories }} </li>
   </ul>
   <p>You've visited Beno {{ num_visits }}{% if num_visits == 1%} time{% else %} times{% endif %}.</p>
 {% endblock %}
