--- a/beno/templates/beno/category_detail.html
+++ b/beno/templates/beno/category_detail.html
@@ -1,13 +1,13 @@
 {% extends "base_generic.html" %}
 {% block title %}
-<title>{{ tag.name.capitalize }}</title>
+<title>{{ category.name.capitalize }}</title>
 {% endblock %}
 
 {% block content %}
-  <h1>Tasks in {{ tag.name.capitalize }}</h1>
+  <h1>Tasks in {{ category.name.capitalize }}</h1>
   <h5>Tasks:</h5>
   <ul>
-    {% for task in tag.task_set.all %}
+    {% for task in category.task_set.all %}
     <li>
       <a href="{{ task.get_absolute_url }}">{{ task.description }}</a>
       <p class="text-danger">{% if task.is_overdue %}OVERDUE{% endif %}</p>
