--- a/beno/templates/beno/task_detail.html
+++ b/beno/templates/beno/task_detail.html
@@ -31,9 +31,9 @@
 
   <div style="margin-top:10px">
     <hr>
-    <h5>Tags:</h5>
-      {% for tag in task.tag.all %}
-        <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}
+    <h5>Categories:</h5>
+      {% for category in task.category.all %}
+        <a href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}
       {% endfor %}
   <div>
 
