--- a/beno/templates/registration/login.html
+++ b/beno/templates/registration/login.html
@@ -23,12 +23,12 @@
   <table>
 
   <tr>
-    <td>{{ form.username.label_tag }}</td>
+    <td>{{ form.username.label_category }}</td>
     <td>{{ form.username }}</td>
   </tr>
 
   <tr>
-    <td>{{ form.password.label_tag }}</td>
+    <td>{{ form.password.label_category }}</td>
     <td>{{ form.password }}</td>
   </tr>
   </table>
