--- a/beno/templates/beno/category_list.html
+++ b/beno/templates/beno/category_list.html
@@ -15,6 +15,6 @@
       {% endfor %}
     </ul>
   {% else %}
-    <p><i>You have not categoryged any tasks yet.</i></p>
+    <p><i>You have not added any categories yet.</i></p>
   {% endif %}
 {% endblock %}
