--- a/beno/templates/beno/category_detail.html
+++ b/beno/templates/beno/category_detail.html
@@ -14,4 +14,14 @@
     </li>
     {% endfor %}
   </ul>
+
+  <div style="margin-top:10px">
+    <hr>
+    <h5>Update or delete this category</h5>
+    <ul>
+      <li><a href="{% url 'category_update' pk=category.id %}">Update</a></li>
+      <li><a href="{% url 'category_delete' pk=category.id %}">Delete</a></li>
+    </ul>
+
+  </div>
   {% endblock %}
