Add signup link from login page

--- a/beno/templates/registration/login.html
+++ b/beno/templates/registration/login.html
@@ -38,4 +38,8 @@
   </form>
 
   <p><a href="{% url 'password_reset' %}">Forgotten password</a></p>
+ <br>
+  <h5>Not got an account yet?</h5>
+  <p><a href="{% url 'signup' %}">Sign up here!</a></p>
+
 {% endblock %}
