--- a/beno/templates/base_generic.html
+++ b/beno/templates/base_generic.html
@@ -31,7 +31,7 @@
             <li><a href="{% url 'category_create' %}">Add new category</a></li>
             <br>
           {% if user.is_authenticated %}
-            <li>Logged in as {{ user.get_username }}</li>
+            <li>Logged in as {{ user.get_short_name }}</li>
             <li><a href="{% url 'logout'%}">Logout</a></li>
           {% else %}
             <li><a href="{% url 'login'%}">Login</a></li>
